--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     package="com.example.learn_ci_cd">
     <application
-        android:label="learn_ci_cd"
+        android:label="Hoda App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
